trying fixing overflow right

--- a/styles.css
+++ b/styles.css
@@ -381,7 +381,7 @@ footer address {
     text-justify: inter-word; /* Garante justificação completa */
     max-width: 1200px; /* Optional: limit maximum width */
     padding-left: 50px;
-    padding: 30px; /* Optional: padding inside the box */
+    padding: 20px; /* Optional: padding inside the box */
 
 
     
@@ -398,7 +398,7 @@ footer address {
     text-justify: inter-word; /* Garante justificação completa */
     max-width: 1200px; /* Optional: limit maximum width */
     padding-left: 50px;
-    padding: 30px; /* Optional: padding inside the box */
+    padding: 20px; /* Optional: padding inside the box */
 
 
    
@@ -415,7 +415,7 @@ footer address {
     text-justify: inter-word; /* Garante justificação completa */
     max-width: 1200px; /* Optional: limit maximum width */
     padding-left: 50px;
-    padding: 30px; /* Optional: padding inside the box */
+    padding: 20px; /* Optional: padding inside the box */
     background: black
 
 
